# knowledge-base

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  backend-development-workflow.md  pyproject.toml  run.py
.github/: copilot-instructions.md
config/: custom_dict.txt  settings.yaml  sources.yml
config/environments/: development.yml  production.yml
docker/: Dockerfile.api  Dockerfile.mcp  Dockerfile.sync  docker-compose.dev.yml  docker-compose.yml  init.sql  nginx.conf
docs/: 知识库构建方案.md
tests/: conftest.py
tests/test_api/: test_main.py  test_search.py
tests/test_mcp/: test_server.py
tests/test_sync/: test_gitlab_syncer.py
tools/scripts/: setup.py
